<resources>
    <string name="app_name">Medical Insurance</string>
    <string name="title_home">Home</string>
    <string name="title_insurance">Insurance</string>
    <string name="title_chat">Chat</string>
    <string name="choose_doctor">Choose Doctor</string>
    <string name="type_your_message">Type your message:</string>
    <string name="send">Send</string>
    <string name="start_chat">Start\nChat</string>
</resources>
