<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/doctors_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.95"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/choose_doctor"
                    android:textColor="#FFFF" />

                <Switch
                    android:id="@+id/choose_doctor_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/doctors_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="180dp" />

                <ImageButton
                    android:id="@+id/previous_image_button"
                    android:layout_width="45dp"
                    android:layout_height="180dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="#FFFF" />

                <ImageButton
                    android:id="@+id/next_image_button"
                    android:layout_width="45dp"
                    android:layout_height="180dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:tint="#FFFF" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_your_message"
                android:textColor="#FFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFF"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/message_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Your message"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/send_button"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="end"
                    android:layout_margin="5dp"
                    android:background="@drawable/rectangel_button_background"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="#EEEEE6" />
            </LinearLayout>

            <Button
                android:id="@+id/start_chat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:background="@drawable/circular_button_background"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:text="@string/start_chat"
                android:textAllCaps="false"
                android:textColor="#FFFF" />
        </LinearLayout>
    </LinearLayout>
</layout>